[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sageattention-optout-customnodes"
version = "0.1.0"
description = "Minimal ComfyUI custom node for per-model SageAttention opt-out and attention overrides."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/EnviralDesign/comfy-sageattention-optout-customnodes"
Documentation = "https://github.com/EnviralDesign/comfy-sageattention-optout-customnodes#readme"
"Bug Tracker" = "https://github.com/EnviralDesign/comfy-sageattention-optout-customnodes/issues"

[tool.comfy]
PublisherId = "enviral-design"
DisplayName = "SageAttention Opt-out Custom Nodes"
